thcrap/src/global.h

// Initializes global_cfg
void globalconfig_init(void);
// Returns the value matching key in config converted in bool
// If key isn't in config it returns default_value with errno ENOENT
BOOL globalconfig_get_boolean(const char* key, const BOOL default_value);
// Sets the value in config and then writes the result on disk
// It returns what json_dump_file returns
int globalconfig_set_boolean(const char* key, const BOOL value);
// Returns the value matching key in config converted in long long
// If key isn't in config it returns default_value with errno ENOENT
long long globalconfig_get_integer(const char* key, const long long default_value);
// Sets the value in config and then writes the result on disk
// It returns what json_dump_file returns
int globalconfig_set_integer(const char* key, const long long value);
void  TH_CDECL thcrap_free(void *mem);
# define DEBUG_OR_RELEASE "_d"
# define DEBUG_OR_RELEASE