netcode/thcrap_stuff/stack.h

// Uses the current patch stack
json_t* stack_json_resolve(const char *fn, size_t *file_size);
/// -----------

/// Iteration and Manipulation
/// ------------
// Add a patch to the stack from a patch_t.
void stack_add_patch(patch_t *patch);
// Iterate over the patches in the stack
void stack_foreach(void (*callback)(const patch_t *patch, void *userdata), void *userdata);
// Alternative version of stack_foreach that support a C++ lambda as parameter
void stack_foreach_cpp(std::function<void (const patch_t*)> callback);
// Clear the stack and free its patches
void stack_free();